--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "ezforms": "^1.3.3",
+    "ezhtml": "^1.4.1",
     "ezobjects-mysql": "^6.1.8",
-    "eztables": "^0.4.2",
     "htmlspecialchars": "^1.0.5",
     "moment": "^2.24.0",
     "session-file-store": "^1.2.0"
